# dpcs-diagnostics

./: README.md  config.json  main.py  pyproject.toml
core/: interfaces.py  orchestrator.py
dpcs-diagnostics/: Dockerfile  docker-compose.yml  pyproject.toml
dpcs-diagnostics/modules/: __init__.py  resource_module.py
dpcs-diagnostics/test/: hello.py
modules/: __init__.py  enviroment_module.py  integrity_module.py  resource_module.py
reports/: report.json
responders/: __init__.py  file_responder.py
