[project]
name = "dpcs-diagnostics"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonid Kalintsev",email = "lensuperhero@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "psutil (>=7.2.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
