[project]
name = "dpcs-diagnostics"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonid Kalintsev",email = "lensuperhero@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "psutil (>=7.2.2,<8.0.0)",
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "requests (>=2.34.2,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
